gatewayservice/gatewayservice/kafkadeploymentlocal.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: kafkadeployment
spec:
 replicas: 1
 selector:
  matchLabels:
   appName: kafka
 template:
  metadata:
   labels:
    appName: kafka
  spec:
   hostname: kafakbroker01
   containers:
    - name: kafkapods
      image: bitnami/kafka:latest
      imagePullPolicy: Always
      ports:
       - containerPort: 9092
      volumeMounts:
      - name: kafkastorage
        mountPath: /bitnami/kafka
   volumes:
   - name: kafkastorage
     persistentVolumeClaim:
      claimName: kafka-pvc
---

apiVersion: v1
kind: Service
metadata:
 name: kafkalb
spec:
 selector:
  appName: kafka
 ports:
  - port: 9092
    targetPort: 9092
 type: LoadBalancer
