gatewayservice/gatewayservice/redisdeployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: redisdeployment
spec:
 replicas: 1
 selector:
  matchLabels:
   appName: redis
 template:
  metadata:
   labels:
    appName: redis
  spec:
   containers:
    - name: redispods
      image: redis:latest
      imagePullPolicy: Always
      ports:
       - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
 name: redislb
spec:
 selector:
  appName: redis
 ports:
  - port: 6379
    targetPort: 6379
 type: LoadBalancer
