gatewayservice/gatewayservice/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: gatewayservicedeployment
spec:
 replicas: 1
 selector:
  matchLabels:
   appName: gatewayservice
 template:
  metadata:
   labels:
    appName: gatewayservice
  spec:
   containers:
    - name: gatewayservicepods
      image: gryffindor937/gatewayservicedeployment:1.0
      imagePullPolicy: Always
      ports:
       - containerPort: 8084
---

apiVersion: v1
kind: Service
metadata:
 name: gatewayservicelb
spec:
 selector:
  appName: gatewayservice
 ports:
  - port: 8084
    targetPort: 8084
 type: LoadBalancer
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewayingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: gatewayservicelb
            port:
              number: 8084
